--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,10 @@ inputs:
   infra_repo:
     required: true
     description: "Repository for ArgoCD to pick up changes from."
+  infra_branch:
+    required: true
+    description: "Branch in infra_repo for ArgoCD to pick up changes from."
+    default: "main"
   deploy_key:
     required: true
     description: "Private key, with its public counterpart expected to be attached to `infra_repo` as deploy key."
@@ -38,6 +42,7 @@ runs:
       uses: actions/checkout@v4
       with:
         repository: digitalservicebund/${{ inputs.infra_repo }}
+        ref: ${{ inputs.infra_branch }}
         ssh-key: ${{ inputs.deploy_key }}
     - name: Update image tag for ${{ inputs.environment }}
       env:
@@ -61,7 +66,7 @@ runs:
         git add manifests/overlays/${{ inputs.environment }}/kustomization.yaml
         git diff-index --cached --quiet HEAD ||
           git commit -m "Bump ${{ inputs.environment }} image to ${{ inputs.version }}" -m "[skip ci]" &&
-          git push origin main
+          git push origin ${{ inputs.infra_branch }}
     - name: Determine ArgoCD version
       id: argocd-version
       shell: bash
