--- a/action.yml
+++ b/action.yml
@@ -67,13 +67,21 @@ runs:
         do
           kustomize edit set image ghcr.io/digitalservicebund/${repo}:${{ inputs.version }}
         done
-    - name: "Commit and push changes for infra repository"
+    - name: "Get GitHub App User ID"
+      shell: bash
+      id: get-user-id
+      run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+      env:
+        GH_TOKEN: ${{ steps.app-token.outputs.token }}
+    - name: "Git Config"
       shell: bash
       run: |
-        set -ex
-        git config user.name "${{ github.workflow }}"
-        # This email identifies the commit as GitHub Actions - see https://github.com/orgs/community/discussions/26560
-        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
+        git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
+    # git commands like commit work using the bot user
+    - name: "Commit an push changes to infra repo"
+      shell: bash
+      run: |
         git add manifests/overlays/${{ inputs.environment }}/kustomization.yaml
         git diff-index --cached --quiet HEAD ||
           git commit -m "Bump ${{ inputs.environment }} image to ${{ inputs.version }}" -m "[skip ci]" &&
