--- a/action.yml
+++ b/action.yml
@@ -18,9 +18,12 @@ inputs:
     required: true
     description: "Branch in infra_repo for ArgoCD to pick up changes from."
     default: "main"
-  deploy_key:
+  github_app_private_key:
     required: true
-    description: "Private key, with its public counterpart expected to be attached to `infra_repo` as deploy key."
+    description: "Private key of a Github App that has Repository Content Read & Write access to the infra repo."
+  github_app_id:
+    required: true
+    description: "App ID of a Github App that has Repository Content Read & Write access to the infra repo."
   app:
     required: true
     description: "ArgoCD application to be deployed."
@@ -38,13 +41,21 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Checkout infra repository
+    - name: "Create GitHub App token"
+      uses: actions/create-github-app-token@v2
+      id: app-token
+      with:
+        app-id: ${{ inputs.github_app_id }}
+        private-key: ${{ inputs.github_app_private_key }}
+        owner: digitalservicebund
+        repositories: ${{ inputs.infra_repo }}
+    - name: "Checkout infra repository"
       uses: actions/checkout@v6
       with:
         repository: digitalservicebund/${{ inputs.infra_repo }}
         ref: ${{ inputs.infra_branch }}
-        ssh-key: ${{ inputs.deploy_key }}
-    - name: Update image tag for ${{ inputs.environment }}
+        token: ${{ steps.app-token.outputs.token }}
+    - name: "Update image tag for ${{ inputs.environment }}"
       env:
         DEPLOYING_REPOS: ${{ inputs.deploying_repo }}
       shell: bash
@@ -56,18 +67,25 @@ runs:
         do
           kustomize edit set image ghcr.io/digitalservicebund/${repo}:${{ inputs.version }}
         done
-    - name: Commit and push changes for infra repository
+    - name: "Get GitHub App User ID"
+      shell: bash
+      id: get-user-id
+      run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+      env:
+        GH_TOKEN: ${{ steps.app-token.outputs.token }}
+    - name: "Git Config"
       shell: bash
       run: |
-        set -ex
-        git config user.name "${{ github.workflow }}"
-        # This email identifies the commit as GitHub Actions - see https://github.com/orgs/community/discussions/26560
-        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
+        git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
+    - name: "Commit an push changes to infra repo"
+      shell: bash
+      run: |
         git add manifests/overlays/${{ inputs.environment }}/kustomization.yaml
         git diff-index --cached --quiet HEAD ||
           git commit -m "Bump ${{ inputs.environment }} image to ${{ inputs.version }}" -m "[skip ci]" &&
           git push origin ${{ inputs.infra_branch }}
-    - name: Determine ArgoCD version
+    - name: "Determine ArgoCD version"
       id: argocd-version
       shell: bash
       run: |
@@ -76,19 +94,19 @@ runs:
         echo "version=$argocd_version" >> $GITHUB_OUTPUT
       env:
         ARGOCD_SERVER: ${{ inputs.argocd_server }}
-    - name: Cache argocd executable
+    - name: "Cache argocd executable"
       id: cache-argocd
       uses: actions/cache@v4
       with:
         path: argocd
         key: ${{ steps.argocd-version.outputs.version }}-argocd
-    - name: Download argocd executable
+    - name: "Download argocd executable"
       if: steps.cache-argocd.outputs.cache-hit != 'true'
       shell: bash
       run: |
         set -ex
         curl -sSL -o argocd "https://github.com/argoproj/argo-cd/releases/download/${{ steps.argocd-version.outputs.version }}/argocd-linux-amd64"
-    - name: Trigger Argo CD sync
+    - name: "Trigger Argo CD sync"
       shell: bash
       run: |
         set -ex
